# ikenga

./: .env.example  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  README.md  biome.json  components.json  index.html  package.json  phase-0-report.md  remotion.config.ts  tsconfig.json  vite.config.ts
.changeset/: iyke-click-and-mode-sync.md  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pkg-browser-child.json  window-detached.json
src-tauri/examples/: verify_workspace_discovery.rs
src-tauri/icons/: .gitignore  icon.icns
src-tauri/migrations/: 0001_init.sql  0002_viewer_recents.sql  0003_claude_sessions.sql  0004_render_queue.sql  0005_mbox_sync.sql  0006_storyboards.sql  0007_pkg_kernel.sql  0008_pkg_install_source.sql  0009_strip_legacy.sql  0010_activity_bar_pinning.sql  0011_chat_sessions.sql  0012_session_fork.sql  0013_settings_kv.sql  0014_browser_sessions.sql  0015_projects.sql  0016_iyke_memory.sql  0017_claude_asset_preferences.sql  0018_pkg_trust_versioning.sql  0019_artifact_pin_metadata.sql  0020_pkg_permission_violations.sql  0021_pkg_capability_snapshots.sql  0022_artifact_comments.sql  0023_studio_threads.sql  0024_rename_chat_threads_to_chat_sessions.sql  0025_tasks_domain.sql  0026_mail_domain.sql  0027_outbound_domain.sql  0028_sales_gtm_domain.sql  0029_finance_domain.sql  0030_content_product_domain.sql  0031_work_domain.sql  0032_pure_etl_drift_fix.sql  0033_finance_views.sql  0034_mail_outbound_ext.sql  0035_sales_ext.sql  0036_fundraising_ext.sql  0037_content_ext.sql  0038_strategy_ext.sql  0039_infra_ext.sql  0040_finance_view_deterministic.sql  (+16 more)
src-tauri/resources/: artifact-iframe-bridge.js  ikenga-tokens.css  iyke-iframe-bridge.js
src-tauri/resources/builtin-pkgs/: .gitignore
src-tauri/resources/builtin-pkgs/com.ikenga.engine-claude-code/: dist
src-tauri/resources/builtin-pkgs/com.ikenga.engine-noop/: dist  manifest.json
src-tauri/resources/builtin-pkgs/com.ikenga.iyke/: manifest.json
src-tauri/resources/builtin-pkgs/com.ikenga.iyke/commands/: branch.md  dom.md  go.md  grid.md  logs.md  pin.md  promote.md  state.md  studio.md  versions.md
src-tauri/resources/builtin-pkgs/com.ikenga.iyke/skills/iyke/: SKILL.md
src-tauri/resources/builtin-pkgs/com.ikenga.mcp-iyke/: README.md  manifest.json  package.json  tsconfig.json
src-tauri/resources/builtin-pkgs/com.ikenga.mcp-iyke/src/: api.ts  control.ts  index.ts
src-tauri/resources/builtin-pkgs/com.royalti.hyperframes/: manifest.json
src-tauri/resources/builtin-pkgs/com.royalti.storyboard/: manifest.json
src-tauri/resources/builtin-pkgs/com.royalti.video-studio/: manifest.json
src-tauri/src/: env_files.rs  fs_roots.rs  lib.rs  main.rs  path_fix.rs  platform.rs  runtime.rs  vault_key.rs
src-tauri/src/acp/: fork.rs  interrupt.rs  mapping.rs  mod.rs  mode.rs  notify.rs  permission.rs  prompt.rs  server.rs
src-tauri/src/agent_detect/: agents.rs  config_claude.rs  known.rs  mod.rs  scaffold.rs  system.rs
src-tauri/src/claude/: discovery.rs  event.rs  jsonl_reader.rs  mod.rs  session.rs  stream_parser.rs
src-tauri/src/commands/: acp.rs  actions.rs  activity_bar.rs  agent_ops.rs  backup.rs  bg_spike.rs  chat.rs  claude.rs  claude_config.rs  claude_store.rs  comment_route.rs  comments.rs  data_health.rs  db.rs  desktop.rs  engine_layout.rs  fs.rs  fs_roots.rs  identity.rs  iyke.rs  mbox.rs  mod.rs  pa_actions.rs  permissions_audit.rs  pkg.rs  pkg_content.rs  pkg_dev.rs  pkg_fetch.rs  pkg_invoke.rs  pkg_mcp.rs  pkg_sidecar.rs  pkg_sidecar_stream.rs  pkg_studio.rs  pkg_trust.rs  pkg_webview.rs  projects.rs  pty.rs  render.rs  runtime.rs  screenshot.rs  (+9 more)
src-tauri/src/commands/claude_store/: install.rs  merge.rs  registry.rs  resolve.rs  toml_merge.rs
src-tauri/src/commands/storyboard/: concepts.rs  jobs.rs  mod.rs  paths.rs  process.rs
src-tauri/src/engines/: mod.rs
src-tauri/src/engines/claude_code/: fork.rs  interrupt.rs  mapping.rs  mod.rs  mode.rs  notify.rs  permission.rs  prompt.rs  server.rs
src-tauri/src/engines/codex_pty/: engine.rs  mod.rs  parser.rs
src-tauri/src/engines/cursor_agent/: mod.rs  server.rs
src-tauri/src/engines/gemini_acp/: mod.rs  server.rs  transport.rs
src-tauri/src/fs_watch/: mod.rs
src-tauri/src/iyke/: auth.rs  browser_handlers.rs  browser_inject.js  browser_rpc.rs  browser_sessions.rs  chrome_engine.rs  claude.rs  comments.rs  handlers.rs  layout.rs  mcp.rs  memory.rs  mod.rs  pa_actions.rs  permissions_audit.rs  pkg_dispatch.rs  playwright_proxy.rs  projects.rs  rpc.rs  secrets.rs  server.rs  sessions.rs  state.rs  terminal.rs  trust.rs
src-tauri/src/pkg/: cap_snapshot.rs  engine_adapter.rs  file_watcher.rs  http_proxy.rs  keep_awake.rs  kernel.rs  lifecycle.rs  manifest.rs  mcp_runtime.rs  mod.rs  permissions_check.rs  registry.rs  signature.rs  skill_actions.rs  source.rs  trust.rs  webview.rs
src-tauri/src/pkg/chrome/: actions.rs  detect.rs  launcher.rs  lifecycle.rs  mod.rs  profile.rs  snapshot.rs
src-tauri/src/pkg/engine_adapters/: claude_code.rs  codex.rs  gemini.rs  mod.rs  symlink.rs  test_util.rs  transcoder.rs
src-tauri/src/pkg/registries/: activity_bar.rs  claude_assets.rs  cron.rs  engine_assets.rs  iyke_routes.rs  mcp.rs  mod.rs  permissions.rs  queries.rs  settings.rs  sidecars.rs  ui_routes.rs
src-tauri/src/pkg/testdata/signature_golden_v1/: README.md  canonical.json  manifest.json  manifest.minisig  publisher.pub
src-tauri/src/pkg_content/: mod.rs
src-tauri/src/pty/: foreground.rs  mod.rs
src-tauri/src/render/: mod.rs  process.rs
src-tauri/src/sidecar/: mod.rs
src-tauri/src/viewer_server/: mod.rs
src-tauri/src/window/: descriptor.rs  events.rs  mod.rs  registry.rs
src-tauri/templates/starter/claude-code/agents/: content-curator.md  outbound-agent.md  release-coordinator.md
src-tauri/templates/starter/claude-code/commands/: changelog.md  pitch.md  release.md
src-tauri/templates/starter/claude-code/skills/changelog-drafter/: SKILL.md
src-tauri/templates/starter/claude-code/skills/ikenga-artifact-builder/: SKILL.md
(+1088 files in other folders)
