[package]
name = "ikenga-desktop"
version = "0.4.0"
description = "PA Desktop — Tauri + xterm + portable-pty"
authors = ["Ikenga"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ikenga_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables Window::add_child for in-window child webviews (the
# load-bearing API for pkg-browser). Multi-webview was stabilized in
# tauri 2.1 (PR #11616, Nov 2024) for the macOS WKWebView render path; the
# feature flag remains the way to opt into the per-window child API.
tauri = { version = "2.1", features = ["unstable", "devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
# Phase 9 (ACP migration): OS notifications for the Notification +
# PermissionRequest user-attention hooks. The actual `sendNotification`
# call is fired from the frontend (which knows about route focus +
# pane state); the plugin is registered Rust-side so its IPC handlers
# are available to the webview.
tauri-plugin-notification = "2"
# Used by the onboarding wizard to open install-guide URLs in the user's
# default browser via `open(url)`. Sidecars still spawn directly through
# tokio::process — we only enable the `open` API surface here.
tauri-plugin-shell = "2"
# Self-update: checks the GitHub Releases endpoint declared in
# tauri.conf.json plugins.updater.endpoints, verifies the sig against
# the embedded pubkey, downloads + installs. JS side calls .check() /
# .downloadAndInstall() via @tauri-apps/plugin-updater.
tauri-plugin-updater = "2"
# Companion to plugin-updater: exposes `relaunch()` so the JS hook can
# restart the app after install. Tiny — registers one IPC handler.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Decode the native window-capture PNG and crop it to a single pane's screen
# rect (commands/screenshot.rs). Already in the lockfile transitively; pinned
# here so the pane native-crop path has it directly. PNG-only to stay lean.
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "process", "io-util"] }
dashmap = "6"
shellexpand = "3"
anyhow = "1"
log = "0.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "auth", "cors"] }
tower = { version = "0.4", features = ["util"] }
notify = "6"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
mime_guess = "2"
glob = "0.3"
trash = "5"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Synchronous HTTP client for the --screenshot CLI dispatch path. Runs before
# the Tokio runtime exists, so reqwest/hyper would be overkill — ureq is
# blocking and tiny. Localhost-only traffic, so we don't need TLS features.
ureq = { version = "2", default-features = false, features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# sqlx is used by tauri-plugin-sql under the hood; we depend on it directly
# so db_query/db_exec can return JSON rows without bouncing through the plugin's
# private internals. This is the cleanest path until tauri-plugin-sql exposes
# its pool publicly. Keep features minimal.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json"] }
# Used by render::process to parse Remotion CLI progress lines.
regex = "1"
# YAML frontmatter parsing for `.claude/agents/*.md`, `.claude/skills/*/SKILL.md`,
# `.claude/commands/*.md`. Frontmatter has multi-line list values (skills-used,
# allowed-tools) so a real YAML parser is required.
serde_yaml = "0.9"
# Robust nested-table TOML parsing for the Codex config reader (WP-18):
# `~/.codex/config.toml` `[mcp_servers.<id>]` + inline `[hooks]`, and
# `~/.codex/agents/*.toml`. The Gemini command reader hand-rolls a flat
# top-level scanner, but Codex needs real nested tables, so we depend on a
# proper parser here. Pinned to 0.8 — already present transitively in the
# lock (`toml v0.8.2`, via `system-deps`), so this adds no new version.
toml = "0.8"
# Format-preserving TOML editing for the v2b (WP-22) Codex write engine. The
# read side (`toml::Value`) reorders + reformats on re-serialize, which would
# break the "unrelated keys byte-identical" round-trip guarantee. `toml_edit`'s
# `DocumentMut` preserves whitespace, key order, and comments and only mutates
# the single touched key. Pinned to 0.20 — the exact version `toml v0.8.2`
# already pulls into `Cargo.lock` (`toml_edit v0.20.2`), so this adds no new
# version to the tree.
toml_edit = "0.20"
# Cron scheduler for the pkg-kernel cron registry. Picked over a hand-rolled
# tokio-interval loop so we get real cron-expression semantics (6-field with
# seconds, used by smoke tests for `* * * * * *`).
tokio-cron-scheduler = "0.13"
# Backup/restore: zip-archive read+write. Defaults are fine — we use Stored
# (no compression) for app.db since SQLite content is incompressible enough
# that the CPU cost isn't worth it, and Deflate for manifest.json.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Backup secrets (phase 2): age passphrase encryption for the kv blob inside
# .ikbak. armor disabled — bundle is binary already.
age = { version = "0.10", default-features = false }
which = "7"
sysinfo = { version = "0.36.1", default-features = false, features = ["disk"] }
# Embeds the starter `.claude/` templates (agents/skills/commands) directly
# into the release binary so Phase 6's scaffolder doesn't need to shell out
# to cc-config or carry loose files on disk. Source tree:
# src-tauri/templates/starter/claude-code/.
include_dir = "0.7"

# pkg-browser kernel: per-pkg child webview cookie-jar isolation. On macOS the
# data_store_identifier is a 16-byte sha256 prefix of (pkg_id || '/' || partition).
# Also used by `pkg_install_from_registry` (sha2::Sha512) for tarball integrity.
sha2 = "0.10"
# Async HTTP client for downloading pkg tarballs from npm. rustls instead of
# system OpenSSL — no native deps, matches the rest of the rust-tls ecosystem.
# `stream` enables chunk-by-chunk reads so we can hash + write in parallel
# without buffering the whole tarball in memory.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
# Tarball extraction for pkg installs. npm tarballs are gzip-compressed.
flate2 = "1"
tar = "0.4"
# Manifest signature verification for the trusted-pkg tier (ADR-017 / WP-02).
# minisign is the SAME signature scheme the FE already uses to verify the
# registry index (`@ikenga/registry-client` verifyMinisign + REGISTRY_PUBKEY),
# so signed manifests + the signed index share one crypto primitive — no new
# scheme. Pinned to 0.2.5, the exact version already in Cargo.lock (pulled
# transitively via tauri-plugin-updater), so this adds no new version to the
# tree. minisign is Ed25519 + BLAKE2b under the hood, so the ADR's ed25519
# intent holds.
minisign-verify = "=0.2.5"
# URL parsing for pkg_webview navigation. Already a transitive dep via several
# crates; pinning explicitly so usage in pkg/webview.rs is direct.
url = "2"


# Agent Client Protocol — types + traits for our in-process ACP server
# implementation. The wire-framing/JSON-RPC layer is not used today (we
# expose the Agent surface through Tauri commands, not stdio); we only
# pull the schema types so frontend and backend speak the same
# vocabulary as the wider ACP ecosystem (Zed, claude-agent-acp,
# codex-acp, etc.). `unstable` enables fork/resume/session_model which
# we want for /branch + faster resume + per-session model overrides.
agent-client-protocol = { version = "0.11", features = ["unstable"] }

# CodexPtyEngine: codex CLI is a full-screen TUI, so its PTY stdout is full of
# ANSI cursor-positioning + style escapes. We strip them down to plain text
# before splitting on newlines so the parser can spot real content lines.
strip-ansi-escapes = "0.2"

# macOS-only: NSProcessInfo.beginActivity App-Nap inhibitor. Held while a
# browser MCP tool call is in flight to keep eval round-trips fast even when
# the host window is occluded / minimized. Phase 0.5 confirmed Linux doesn't
# need this; Windows uses webview2-com for its analog.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSProcessInfo", "NSString"] }

# Unix-wide libc. Two consumers:
#   - macOS pty::foreground — sysctl(KERN_PROC_PID) to read
#     kinfo_proc.kp_eproc.e_tpgid, the macOS equivalent of Linux's
#     `/proc/<pid>/stat` tpgid field.
#   - claude::session graceful shutdown — SIGTERM before SIGKILL so the
#     child gets a flush window. Scoped cfg(unix) rather than macOS-only
#     because the transcript-loss bug this fixes reproduces on Linux.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only: WebView2 controller access for the IsVisible hold (see
# pkg/keep_awake.rs). webview2-com is already in Tauri's tree; pinning
# here to the same major as tauri-runtime-wry to avoid pulling a second
# version (which causes windows-core type-mismatch errors at compile).
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

# Mac-only polish (window vibrancy + dock-tile badge) was removed
# in the strip-down. The resolved objc2 v0.5 didn't export
# `MainThreadMarker` at the path the dock-badge code expected, and
# the feature was unverified on Mac anyway. Re-introduce when
# there's a Mac dev session — pin objc2 to a known-working version
# then restore this [target.'cfg(target_os = "macos")'.deps] block
# plus apply_mac_vibrancy + the set_dock_badge body in commands/desktop.rs.

# Release profile — install-UX slim-down (WP-13(c)/WP-31). Rust's default
# release build ships the symbol table (`strip = false`) and skips cross-crate
# LTO, leaving the binary larger than it needs to be. These three knobs shrink
# the binary across EVERY bundle target (deb/AppImage/dmg/nsis) with no
# behaviour change — no `panic = "abort"` (keeps unwinding + catch_unwind
# intact). The 89MB bundled bun runtime and the AppImage media framework are
# the bigger size drivers and are addressed separately (install.sh defaults
# Linux to the smaller .deb); this just stops the binary itself from bloating.
[profile.release]
strip = true        # drop the symbol table Rust emits by default
lto = "thin"        # cross-crate inlining/dead-code elimination, modest compile cost
codegen-units = 1   # better optimisation + dedup at the cost of compile parallelism

[dev-dependencies]
tempfile = "3"
regex = "1"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
unstable_message_id = []

# Stand-alone workspace declaration so cargo doesn't fold this crate into
# the parent royalti-co monorepo workspace. The shell repo lives under the
# gitignored ikenga/ workspace folder; without this, cargo walks up and
# picks up royalti-co/Cargo.toml's [workspace] which lists the OLD path
# (ikenga-desktop/src-tauri).
[workspace]
